support smart match